# hyscores

./: README.org  hyscores.ini  pyproject.toml
hyscores/: __main__.py  application.hy  authorize.hy  mongodb.hy
