[tool.poetry]
name = "hyscores"
version = "0.1.0"
description = ""
authors = ["Anton Vazhnetsov <dragen15051@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
uWSGI = "^2.0.20"
hy = "^1.0a4"
Flask = "^2.1.2"
PyJWT = "^2.3.0"
pymongo = "^4.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
